feat: add route and use case to get total expenses by month with Swagger documentation
